--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
   "name": "workadventure-map-starter-kit",
-  "version": "2.0.0",
-  "main": "index.js",
+  "version": "3.3.18",
   "license": "MIT",
-  "devDependencies": {
-    "@workadventure/iframe-api-typings": "^1.8.2",
-    "eslint": "^7.24.0",
-    "html-webpack-plugin": "^5.3.2",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.31.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0",
-    "webpack-merge": "^5.7.3"
-  },
+  "type": "module",
   "scripts": {
-    "dev": "webpack serve",
-    "start": "webpack serve --open",
-    "build": "webpack --config webpack.prod.js",
-    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "lint": "node_modules/.bin/eslint src/ . --ext .ts",
-    "fix": "node_modules/.bin/eslint --fix src/ . --ext .ts"
+    "dev": "vite",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "prod": "vite preview",
+    "upload": "npm run build && upload-wa-map",
+    "upload-only": "upload-wa-map"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@workadventure/iframe-api-typings": "^1.26.10",
+    "@workadventure/upload-maps": "^1.7.4",
+    "dotenv": "^16.3.1",
+    "typescript": "^5.9.2",
+    "vite": "^4.5.3",
+    "wa-map-optimizer-vite": "^1.1.31"
   },
   "dependencies": {
-    "@workadventure/scripting-api-extra": "^1.3.0"
+    "@workadventure/scripting-api-extra": "^1.9.10"
   }
 }
